--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "express": "3.3.4",
-    "jade": "*"
+    "jade": "*",
+    "node-stringprep": "*",
+    "simple-xmpp": "0.1.13"
   }
 }
