--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "express": "3.3.4",
     "jade": "*",
     "node-stringprep": "*",
-    "simple-xmpp": "0.1.13"
+    "simple-xmpp": "0.1.13",
+    "passport": "*",
+    "passport-windowslive": "*"
   }
 }
